2004-11-12  Not Zed  <NotZed@Ximian.com>

	** merged notzed-messageinfo-branch.

2004-11-10  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* po/POTFILES.in : Added storage/exchange-folder-size.c and
	storage/exchange-folder-tree.glade

2004-11-10  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-hierarchy-webdav.c (dispose): Added
	(class_init): Now instantiates the ExchangeFolderSize class
	(exchange_hierarchy_get_folder_size): Returns the foldersize object
	(exchange_hierarchy_webdav_parse_folder): Fetches and updates the 
	folder size
	* storage/exchange-hierarchy-webdav.h : Similar
	* storage/Makefile.am : Added the new files

2004-11-11  Not Zed  <NotZed@Ximian.com>

	* camel/camel-exchange-folder.c
	(camel_exchange_folder_add_message): make it work with message_id
	rather than references->references[0] again.

2004-11-10  Not Zed  <NotZed@Ximian.com>

	* camel/camel-exchange-folder.c (camel_exchange_folder_construct):
	update for camel api changes, don't handle info set methods
	anymore, and handle the message_id -> references[0] change.

	* camel/camel-exchange-summary.c: updated for camel
	implemenentation changes, now emit folder changed events from
	here, and handle the tag and flags set methods, and set the folder
	on the summary.

2004-11-09  Sarfraaz Ahmed <asarfraaz@novell.com>

	* MAINTAINERS : Added a new file

2004-11-08  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-folder-size.c : Revamped the code to now be a class
	so other hierarchy classes can now instantiate this as an object and
	this class handles only the displaying of the folder tree
	* storage/exchange-folder-size.h : Similar

2004-11-04  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-folder-size.c : Added a new file. This handles the
	displaying of the folder sizes
	* storage/exchange-folder-size.h : Similar
	* storage/exchange-folder-tree.glade : The dialog for displaying the 
	folder tree and the folder sizes

2004-11-04  Sushma Rai  <rsushma@novell.com>