@@ -1,3 +1,8 @@
+2004-11-23  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* storage/xc-commands.c (do_folder_size): Hook for showing the folder
+	sizes. Missed this out in my previous commits.
+
 2004-11-12  Not Zed  <NotZed@Ximian.com>
 
 	** merged notzed-messageinfo-branch.
